--- a/emog.css
+++ b/emog.css
@@ -26,7 +26,7 @@ body {
     height: 20%;
     width: 10%;
     display: flex;
-
+    background-color: beige;
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
